Changed Security filters from HttpServlets to Spring Security
