# src/main/java/org/GoLIfeAPI/controllers/REST/HealthRestController.java
@@ -9,7 +9,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/api/health")
+@RequestMapping("/api/salud")
 public class HealthRestController {
 
     private final MongoService mongoService;
